# steam-shortcuts-cli

./: pyproject.toml
